--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
     }
   </style>
-  <title>Test</title>
+  <title>MONTE CARLO METHOD</title>
 </head>
 <body class="bg-dark">
   <header>
